# bids-collector-desktop

./: .env.example  .gitignore  AUTH_REMOVAL_SUMMARY.md  AUTO_START_IMPLEMENTATION.md  BACKGROUND_DOWNLOADS.md  BUILD_WINDOWS.md  CROSS_PLATFORM_BUILD.md  CROSS_PLATFORM_BUILDS.md  DEBUG_SETUP.md  NAVIGATION_FIX_SUMMARY.md  OPENDAL_TO_AWS_SDK_MIGRATION.md  README.md  S3_INTEGRATION_SUMMARY.md  SEPARATE_TASKS_IMPLEMENTATION.md  UI_INTEGRATION_SUMMARY.md  WINDOWS_BUILD_SUMMARY.md  build-all-platforms.sh  build-windows.bat  build-windows.ps1  build.sh  fix-paths.mjs  package-lock.json  package.json  setup-dev.sh  svelte.config.js  tailwind.config.js  vite.config.js  vitest.config.js
.github/workflows/: build-cross-platform.yml  build-windows.yml  build.yml
.vibe/: .gitignore
.vibe/docs/: BACKGROUND_DOWNLOADS.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  LOGGING_IMPLEMENTATION.md  README.md  S3_CLIENT_SETUP.md  test-auto-start.md
electron/: main.js  preload.js
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  s3_client.rs
src/component/: Navbar.svelte  Pagination.svelte  Sidebar.svelte  SidebarMenuItem.svelte
src/component/icon/: Icon.svelte
src/lib/: auth.js  backgroundDownloads.js  backgroundDownloads.test.js  collections.js  logger.js  logger.test.js  menu.js  openneuro.test.js  rcloneClient.js  s3Client.integration.test.js  s3Client.js  s3Client.test.js  settings.js  storage-config.js  storage.js
src/routes/: +layout.svelte  +page.svelte
src/test/: setup.js
(+9 files in other folders)
